--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  // text-align: center;
 }
 
 .App-logo {
@@ -14,9 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e2e6e9;
   min-height: 100vh;
-  display: flex;
+  // display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
