--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,13 +14,13 @@
 }
 
 .App-header {
-  background-color: #e2e6e9;
+  background-color: #eaebec;
   min-height: 100vh;
   // display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  // font-size: calc(10px + 2vmin);
   color: white;
 }
 
