--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -1,7 +1,7 @@
 .card {
     position: relative;
     width: 360px;
-    height: 360px;
+    height: 400px;
     color: #2e2d31;
     background-color: rgba(210, 236, 253, 0.1);
     overflow: hidden;
@@ -14,7 +14,7 @@
     // height: 400px;
  
 
-    top: 40px;
+    top: 90px;
 
     // display: block;
     position: relative;
@@ -23,21 +23,30 @@
   
   .card_title {
     font-weight: bold;
+  
   }
   
   .card_content {
     position: relative;
-    left: 0;
+
     bottom: 220px;
-      /* edit the width to fit card */
+   
     width: 100%;
     padding: 20px;
-    // height: fit-content;
+
     background-color: rgba(210, 236, 253, 0.1);
     border-top-left-radius: 20px;
-      /* edit here to change the height of the content box */
-    transform: translateY(320px);
-    transition: transform .25s;
+    .card-descriptin
+    {
+      transform: translateY(320px);
+      transition: transform .25s;
+    }
+    .button
+    {
+      opacity: 0;
+    }
+    
+
   }
   
   .card_content::before {
@@ -54,6 +63,8 @@
   
   .card_title {
     color: #131313;
+    position: relative;
+    top: -35px;
     line-height: 14px;
   }
   
@@ -61,35 +72,82 @@
     display: block;
     font-size: 22px;
     margin-bottom: 10px;
-    color: rgb(204, 26, 2);
+    color: rgb(199, 31, 9);
+    position: relative;
+    top: -35px;
+    font-weight: 700;
+    
   }
   
   .card_description {
     font-size: 14px;
     opacity: 0;
-    height:160px;
+    max-height:200px;
     transition: opacity .5s;
+    // display: block;
+   
   }
   
+  .card:hover .card_title {
+   top: 0px;
+    font-weight: bolder;
+    
+  }
+  .card:hover .card_subtitle {
+    top: 0px;
+     font-weight: bolder;
+     
+   }
   .card:hover .card_content {
     transform: translateY(0);
     font-weight: bolder;
+    max-height: 35%;
   }
+  .DetailBtn
+  {
+    opacity: 0;
+
+  }
+  .card:hover .DetailBtn {
+    opacity: 1;
+    transition: ease-in-out;
+    transition: transform .25s;
+    
   
+  }
   .card:hover .card_description {
     opacity: 1;
     transition-delay: .25s;
     font-weight: 500;
+    height:100%;
+    text-rendering: optimizeLegibility;
+    overflow: hidden;
+      
+    text-overflow: ellipsis;
+    white-space: pre-line;
+    
   }
+
+
+  
   .card:hover .temporary_text {
     opacity: 0.2;
     transform: translateY(20px);
     transition: ease-in;
+    // max-height: ;
     
   
   }
+  .card:hover .button {
+    opacity: 1;
+    transition: ease-in-out;
+    transition: transform .25s;
+    
   
+  }
 .button{
+  position: relative;
+  top:60px;
   display: flex;
   justify-content: space-between;
 }
