--- a/src/styles/Cart.scss
+++ b/src/styles/Cart.scss
@@ -15,7 +15,7 @@
     height: 100%;
     width: 100%;
 }
-button{
-    height: 40px;
-    width: 50px;
-}
+// button{
+//     height: 40px;
+//     width: 50px;
+// }
