--- a/src/styles/DetailImg.scss
+++ b/src/styles/DetailImg.scss
@@ -4,6 +4,7 @@
     padding: 40px 0;
     width: 40%;
     float: left;
+    margin-top: 2.5em;
     margin-left: 5%;
     background-color:rgba(222, 238, 253, 0.432);
     display: flex;
@@ -116,7 +117,7 @@
    
    
 }
-.active
+.activeImg
 {
     border: 2px solid rgb(177, 3, 41);
     border-radius: 2px;
