--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -7,22 +7,22 @@
     height: fit-content;
     display: grid;
     grid-template-columns:50% 50%;
+    color: black;
+    
   
-    .left
+    .lbInput
     {
-        justify-content: center;
-        align-items: center;
-  
-        margin-top: auto;
-        div{
-            
-        }
-    }
-    .right{
-        img{
-            width: 100%;
-            height: 100%;
-        }
+        font-size: 18px;
+        width: 100%;
+        margin-bottom: 10px;
+       text-align: left; 
+      
     }
 
+}
+
+.bgLogin
+{
+    background-image: url("../assets/images/bgLogin.jpg");
+    background-size: cover;
 }
