--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -17,7 +17,7 @@
     // height: 400px;
  
 
-    top: 90px;
+    top: 50px;
 
     // display: block;
     position: relative;
@@ -35,7 +35,7 @@
   .card_content {
     position: relative;
 
-    bottom: 220px;
+    bottom: 245px;
    
     width: 100%;
     padding: 20px;
@@ -74,7 +74,7 @@
     font-size: 1.1em;
    height:50px;
     overflow: hidden;
-    top:-1em;
+    top:-5em;
   }
   
   .card_subtitle {
@@ -145,7 +145,9 @@
   .card:hover .temporary_text {
     opacity: 0.2;
     transform: translateY(20px);
+    display: block;
     transition: ease-in;
+    height: auto;
     // max-height: ;
     
   
