--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -1,180 +1,212 @@
-.card {
-    position: relative;
-    width: 100%;
-    height: 490px;
-    color: #2e2d31;
-    background-color: rgba(210, 236, 253, 0.1);
-    overflow: hidden;
-    border-radius: 5px;
-    border: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; 
-    max-width: 360px;
-  
-  }
-  
-  .temporary_text {
-    // font-weight: bold;
-    // height: 400px;
- 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://use.fontawesome.com/releases/v5.13.0/css/all.css");
 
-    top: 50px;
+:root {
+    --font1: 'Heebo', sans-serif;
+    --font2: 'Fira Sans Extra Condensed', sans-serif;
+    --font3: 'Roboto', sans-serif;
 
-    // display: block;
-    position: relative;
-    // margin: 0 auto;
-  }
-  
-  .card_title {
-    font-weight: bold;
-    text-overflow: ellipsis;
-    height:300px;
-
-  
-  }
-  
-  .card_content {
-    position: relative;
-
-    bottom: 245px;
-   
-    width: 100%;
-    padding: 20px;
-
-    background-color: rgba(210, 236, 253, 0.1);
-    border-top-left-radius: 20px;
-    .card-descriptin
-    {
-      transform: translateY(320px);
-      transition: transform .25s;
-    }
-    .button
-    {
-      opacity: 0;
-    }
-    
-
-  }
-  
-  .card_content::before {
-    content: '';
-    position: absolute;
-    top: -50px;
-    right: -50px;
-    width: 80px;
-  
-    transform: rotate(-177deg);
-    border-radius: 50%;
-    box-shadow: inset 47px 47px #f2f2f2;
-  }
-  
-  .card_title {
-    color: #131313;
-    position: relative;
-    display: block;
-    font-size: 1.1em;
-   height:50px;
-    overflow: hidden;
-    top:-5em;
-  }
-  
-  .card_subtitle {
-    display: block;
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: rgb(199, 31, 9);
-    position: relative;
-    text-align:center;
-    font-weight: 700;
-    
-  }
-  
-  .card_description {
-    font-size: 14px;
-    opacity: 0;
-    height:180px;
-    transition: opacity .5s;
-    text-overflow:ellipsis;
-    // display: block;
-    
-   
-  }
-  
-  // .card:hover .card_title {
-  //  top: 0px;
-  //   font-weight: bolder;
-    
-    
-  // }
-  // .card:hover .card_subtitle {
-  //   top: 0px;
-  //    font-weight: bolder;
-     
-  //  }
-  .card:hover .card_content {
-    transform: translateY(0);
-    font-weight: bolder;
-    max-height: 35%;
-  }
-  .DetailBtn
-  {
-    opacity: 0;
-
-  }
-  .card:hover .DetailBtn {
-    opacity: 1;
-    transition: ease-in-out;
-    transition: transform .25s;
-    
-  
-  }
-  .card:hover .card_description {
-    opacity: 1;
-    transition-delay: .25s;
-    font-weight: 500;
-    height:180px;
-    overflow: auto;
-    text-align: justify;
-
-      
-
-    
-  }
+    --btnbg: #ffcc00;
+    --btnfontcolor: rgb(61, 61, 61);
+    --btnfontcolorhover: rgb(255, 255, 255);
+    --btnbghover: #ffc116;
+    --btnactivefs: rgb(241, 195, 46);
 
 
-  
-  .card:hover .temporary_text {
-    opacity: 0.2;
-    transform: translateY(20px);
-    display: block;
-    transition: ease-in;
-    height: auto;
-    // max-height: ;
-    
-  
-  }
-  .card:hover .button {
-    opacity: 1;
-    transition: ease-in-out;
-    transition: transform .25s;
-    
-  
-  }
-.button{
-  position: relative;
-  top:60px;
-  display: flex;
-  justify-content: space-between;
+    --label-index: #960796;
+    --danger-index: #5bc257;
+/* PAGINATE */
+    --link-color: #000;
+    --link-color-hover: #fff;
+    --bg-content-color: #ffcc00;
+
 }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+.container-fluid {
+    max-width: 1400px;
+
+}
+
+.card {
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
+    transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
+    border: 0;
+    border-radius: 1rem;
+}
+
+.card-img,
+.card-img-top {
+    border-top-left-radius: calc(1rem - 1px);
+    border-top-right-radius: calc(1rem - 1px);
+}
+
+
+.card h5 {
+    overflow: hidden;
+    height: 55px;
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+.card h5 a {
+  color: black;
+  text-decoration: none;
+} 
+
+.card-img-top {
+    width: 100%;
+    min-height: 250px;
+    max-height: 250px;
+    object-fit: contain;
+    padding: 30px;
+}
+
+.card h2 {
+    font-size: 1rem;
+}
+
+
+.card:hover {
+    transform: scale(1.02);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+}
+
+/* Centered text */
+.label-top {
+    position: absolute;
+    background-color: var(--label-index);
+    color: #fff;
+    top: 8px;
+    right: 8px;
+    padding: 5px 10px 5px 10px;
+    font-size: .7rem;
+    font-weight: 600;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+.top-right {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    font-size: 1rem;
+    font-weight: 900;
+    background: #8bc34a;
+    line-height: 90px;
+    text-align: center;
+    color: white;
+}
+
+.top-right span {
+    display: inline-block;
+    vertical-align: middle;
+    /* line-height: normal; */
+    /* padding: 0 25px; */
+}
+
+.aff-link {
+    /* text-decoration: overline; */
+    font-weight: 500;
+}
+
+.over-bg {
+    background: rgba(53, 53, 53, 0.85);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(0.0px);
+    -webkit-backdrop-filter: blur(0.0px);
+    border-radius: 10px;
+}
+.bold-btn {
+
+    font-size: 1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 5px 50px 5px 50px;
+}
+.box .btn {
+    font-size: 1.5rem;
+}
+
+@media (max-width: 1025px) {
+    .btn {
+        padding: 5px 40px 5px 40px;
+    }
+}
+@media (max-width: 250px) {
+    .btn {
+        padding: 5px 30px 5px 30px;
+    }
+}
+
+/* START BUTTON */
+.btn-warning {
+    background: var(--btnbg);
+    color: var(--btnfontcolor);
+    fill: #ffffff;
+    border: none;
+    text-decoration: none;
+    outline: 0;
+    /* box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25); */
+    border-radius: 100px;
+}
+.btn-warning:hover {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
+}
+.btn-check:focus + .btn-warning, .btn-warning:focus {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
+}
+.btn-warning:active:focus {
+    box-shadow: 0 0 0 0.25rem var(--btnactivefs);
+}
+.btn-warning:active {
+    background: var(--btnbghover);
+    color: var(--btnfontcolorhover);
+    /* box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35); */
+}
+
+/* END BUTTON */
+
+.bg-success {
+    font-size: 1rem;
+    background-color: var(--btnbg)!important;
+    color: var(--btnfontcolor)!important;
+}
+.bg-danger {
+    font-size: 1rem;
+}
+
+
+.price-hp {
+    font-size: 1rem;
+    font-weight: 600;
+    color: darkgray;
+}
+
+.amz-hp {
+    font-size: .7rem;
+    font-weight: 600;
+    color: darkgray;
+}
+
+.fa-question-circle:before {
+    /* content: "\f059"; */
+    color: darkgray;
+}
+
+.fa-heart:before {
+    color:crimson;
+}
+.fa-chevron-circle-right:before {
+    color: darkgray;
+}
