--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -2,9 +2,12 @@
 {
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
     background-color: rgb(0, 0, 0);
-    margin: 7% auto;
+    margin: 3% 0;
+   
     width: 100%;
-    height: fit-content;
+    height: 60vh;
+    background-size: cover;
+
     display: grid;
     grid-template-columns:50% 50%;
     color: black;
@@ -14,6 +17,7 @@
     {
         font-size: 18px;
         width: 100%;
+        min-width: 20em;
         margin-bottom: 10px;
        text-align: left; 
       
