--- a/src/styles/Register.scss
+++ b/src/styles/Register.scss
@@ -3,7 +3,7 @@
     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
     background-color: rgba(17, 18, 19, 0.288);
     align-items: center;
-
+    height: fit-content !important;
     grid-template-columns: 40% 55%;
     padding: 200px 0;
     display: grid;
@@ -20,23 +20,23 @@
         {
             // display: flex;
   
-            label
-            {
-                margin: 2px;
-                display: block;
-                font-weight: 400;
-                color: rgb(21, 46, 78);
-                text-align:left;
+            // label
+            // {
+            //     margin: 2px;
+            //     display: block;
+            //     font-weight: 400;
+            //     color: rgb(21, 46, 78);
+            //     text-align:left;
 
-            }
-            input
-            {
-                font-size: 18px;
-                width: 100%;
-                margin-bottom: 10px;
-               text-align: left; 
+            // }
+            // input
+            // {
+            //     font-size: 18px;
+            //     width: 100%;
+            //     margin-bottom: 10px;
+            //    text-align: left; 
                 
-            }
+            // }
           
             .submitBtn
             {
