--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -77,7 +77,7 @@
 /* Centered text */
 .label-top {
     position: absolute;
-    background-color: var(--label-index);
+    background-color: #B90B0B;
     color: #fff;
     top: 8px;
     right: 8px;
