--- a/src/styles/Categories.scss
+++ b/src/styles/Categories.scss
@@ -17,6 +17,7 @@
     }
 }
 
+
 .name {
     font-size: 16px;
     color: #e83d16 !important;
@@ -59,4 +60,7 @@
     font-size: 23px;
     font-weight: bold
 }
-
+.bg-custom
+{
+    background-color: #C50000 !important;
+}
