--- a/src/styles/ListItem.scss
+++ b/src/styles/ListItem.scss
@@ -34,7 +34,7 @@
   }
   .btn-right
   {
-    right: -2em; /* Điều chỉnh vị trí bên phải */
+    right: -3em; /* Điều chỉnh vị trí bên phải */
 
   }
   /* Nút Previous */
@@ -42,6 +42,15 @@
     border-radius: 100%;
     width: 100%;
     height: 3em;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        width: 3em;
+    background-color: #C00000 !important;
+    border: none;
+    color: #fff;
+    // background-color: ;
+    span{
+      color: #fff !important;
+    }
   }
   
   /* Nút Next */
