--- a/src/styles/ListItem.scss
+++ b/src/styles/ListItem.scss
@@ -44,7 +44,7 @@
     height: 3em;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
         width: 3em;
-    background-color: #C00000 !important;
+    background-color: #22577E !important;
     border: none;
     color: #fff;
     // background-color: ;
