--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -22,7 +22,7 @@
     font-size: 17px;
   }
   .navbar{
-    background-color: #E70000;
+    background-color: #146C94;
     color: #f2f2f2 !important;
   }
   .navbar-brand a {
@@ -32,7 +32,13 @@
   .logo
   {
     width: 3em;
-  
+ 
+    filter: sepia(100%)  brightness(0%);
+
+      // filter: brightness(0%);
+
+ 
+    
     
   }
 
