--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -2,6 +2,13 @@
     background-color: #6584a8;
     overflow: hidden;
   }
+
+  .searchContainer
+  {
+    padding-right: 15em;
+ margin-right: 5em;
+ margin-left: 3em;
+  }
   .nav-link-nav
   {
   
@@ -31,7 +38,7 @@
   }
   .logo
   {
-    width: 3em;
+    width: 4em;
  
     filter: sepia(100%)  brightness(0%);
 
